--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="ClipClop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ClipClop"
+             xmlns:local="clr-namespace:ClipClop" Startup="Application_Startup"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <FontFamily x:Key="FontAwesomeSolid">/ClipClop;component/Fonts/FontAwesomeSolid.otf#Font Awesome 6 Free Solid</FontFamily>
