--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,30 +6,41 @@
         xmlns:local="clr-namespace:ClipClop"        
         mc:Ignorable="d" Closing="Window_Closing"
         SourceInitialized="Window_SourceInitialized"
-        Title="ClipClop" MinHeight="450" MinWidth="700">
+        BorderThickness="0" WindowStyle="None"
+        Title="ClipClop" MinHeight="450" MinWidth="700" Icon="/Images/ClipClopIcon.ico">
     <Window.Resources>
         <local:PinIconConverter x:Key="PinIconConverter" />
         <local:FalseBoolToVisConverter x:Key="FalseBoolToVisConverter"/>
         <local:BoolToVisConverter x:Key="BoolToVisConverter"/>
-        <local:PercentageConverter x:Key="PercentageConverter"/>        
+        <local:PercentageConverter x:Key="PercentageConverter"/>
     </Window.Resources>
-    <Grid Margin="3" Background="#292a2a">
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="31" GlassFrameThickness="-1" ResizeBorderThickness="4"></WindowChrome>
+    </WindowChrome.WindowChrome>
+
+    <Border BorderThickness="0" CornerRadius="8" BorderBrush="#292a2a">
+    <Grid Margin="0" Background="#292a2a">
         <Grid.RowDefinitions>
-            <RowDefinition Height="29"></RowDefinition>
+            <RowDefinition Height="31"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
+
+
         <Button BorderThickness="0" Background="#292a2a" Click="CloseButton_Click"
-            VerticalAlignment="Top" HorizontalAlignment="Right" Margin="10,2">
-            <TextBlock Text="&#xf410;" FontFamily="{StaticResource FontAwesomeReg}" 
-                Foreground="GhostWhite" FontSize="23" Background="#292a2a"
-                VerticalAlignment="Top"></TextBlock>
+                    WindowChrome.IsHitTestVisibleInChrome="True"
+                VerticalAlignment="Top" HorizontalAlignment="Right" Margin="11,4">
+            <TextBlock Text="&#xf00d;" FontFamily="{StaticResource FontAwesomeSolid}" 
+                    Foreground="GhostWhite" FontSize="23" Background="#292a2a"
+                    VerticalAlignment="Top"></TextBlock>
         </Button>
+
+
         <ListView x:Name="lvMain" Background="#292a2a" HorizontalContentAlignment="Stretch" 
-                  Grid.Row="1" BorderThickness="0">
+                      Grid.Row="1" BorderThickness="0">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border CornerRadius="8" Padding="2" BorderThickness="2"
-                            Margin="0" BorderBrush="#373737" Background="#373737" >
+                                Margin="0" BorderBrush="#373737" Background="#373737" >
                         <Grid Background="#373737" Margin="7,0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -39,21 +50,21 @@
                             <Grid>
                                 <Grid.InputBindings>
                                     <MouseBinding MouseAction="LeftDoubleClick"
-                                                  Command="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.PasteClipCommand}"
-                                                  CommandParameter="{Binding}">                                        
+                                                      Command="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.PasteClipCommand}"
+                                                      CommandParameter="{Binding}">
                                     </MouseBinding>
                                 </Grid.InputBindings>
                                 <TextBlock Text="{Binding Path=Text}" TextWrapping="Wrap"
-                                    HorizontalAlignment="Left" VerticalAlignment="Center"
-                                    Height="30" Foreground="#FFFFFFFF"
-                                    FontSize="21" 
-                                    MaxWidth="{Binding Path=ActualWidth, ElementName=lvMain, UpdateSourceTrigger=PropertyChanged, Converter={local:PercentageConverter}, ConverterParameter='0.85'}"                            
-                                    Visibility= "{Binding IsImage, Converter={StaticResource FalseBoolToVisConverter}}">
+                                        HorizontalAlignment="Left" VerticalAlignment="Center"
+                                        Height="30" Foreground="#FFFFFFFF"
+                                        FontSize="21" 
+                                        MaxWidth="{Binding Path=ActualWidth, ElementName=lvMain, UpdateSourceTrigger=PropertyChanged, Converter={local:PercentageConverter}, ConverterParameter='0.85'}"                            
+                                        Visibility= "{Binding IsImage, Converter={StaticResource FalseBoolToVisConverter}}">
                                 </TextBlock>
-                            <Image Source="{Binding Path=Image}" HorizontalAlignment="Left" VerticalAlignment="Center"
-                                       Height="80"
-                                       Visibility= "{Binding IsImage, Converter={StaticResource BoolToVisConverter}}">
-                            </Image>
+                                <Image Source="{Binding Path=Image}" HorizontalAlignment="Left" VerticalAlignment="Center"
+                                           Height="80"
+                                           Visibility= "{Binding IsImage, Converter={StaticResource BoolToVisConverter}}">
+                                </Image>
                             </Grid>
                             <Grid Grid.Column="2" VerticalAlignment="Center">
                                 <Grid.RowDefinitions>
@@ -62,29 +73,30 @@
                                     <RowDefinition Height="*"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <Button Command="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.TogglePinCommand}"
-                                    CommandParameter="{Binding}" BorderThickness="0" Background="#373737"
-                                        VerticalAlignment="Top">
+                                        CommandParameter="{Binding}" BorderThickness="0" Background="#373737"
+                                            VerticalAlignment="Top">
                                     <TextBlock Text="&#xf005;"                                 
-                                        FontFamily="{Binding Path=Pinned, Converter={StaticResource PinIconConverter}}" 
-                                        Foreground="GhostWhite" FontSize="20" 
-                                        Background="#373737"
-                                        VerticalAlignment="Top"></TextBlock>
+                                            FontFamily="{Binding Path=Pinned, Converter={StaticResource PinIconConverter}}" 
+                                            Foreground="GhostWhite" FontSize="20" 
+                                            Background="#373737"
+                                            VerticalAlignment="Top"></TextBlock>
                                 </Button>
                                 <Button Command="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=DataContext.DeleteClipCommand}"
-                                    CommandParameter="{Binding}" BorderThickness="0" Background="#373737"
-                                        Grid.Row="2"
-                                        VerticalAlignment="Bottom">
+                                        CommandParameter="{Binding}" BorderThickness="0" Background="#373737"
+                                            Grid.Row="2"
+                                            VerticalAlignment="Bottom">
                                     <TextBlock Text="&#xf2ed;"                                 
-                                        FontFamily="{StaticResource FontAwesomeReg}"
-                                        Foreground="GhostWhite" FontSize="20" 
-                                        Background="#373737" 
-                                        VerticalAlignment="Center"></TextBlock>
+                                            FontFamily="{StaticResource FontAwesomeReg}"
+                                            Foreground="GhostWhite" FontSize="20" 
+                                            Background="#373737" 
+                                            VerticalAlignment="Center"></TextBlock>
                                 </Button>
                             </Grid>
-                        </Grid>                    
+                        </Grid>
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
     </Grid>
+    </Border>
 </Window>
